--- a/public/browser-extension.html
+++ b/public/browser-extension.html
@@ -5,7 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title><%= htmlWebpackPlugin.options.title %></title>
+  <% if(process.env.NODE_ENV === 'development') { %>
   <script src="http://localhost:8098"></script>
+  <% } else { %>
+  <% } %>
 </head>
 <body>
   <div id="app"></div>
